--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ 'main' ]
 
 jobs:
-  test-lint:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,9 +24,6 @@ jobs:
 
       - name: Install dependencies
         run: cd frontend && npm ci
-
-      - name: Lint code
-        run: cd frontend && npm run lint
 
       - name: Test code
         run: cd frontend && npm test
