--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     }
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@chakra-ui/icons": "^2.1.1"
   }
 }
