--- a/backend/delivery-ms/src/main/resources/application.properties
+++ b/backend/delivery-ms/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.datasource.url=jdbc:h2:file:/tmp/deliveriesdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.flyway.cleanDisabled=false
