--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-#server.servlet.context-path=/product-service
+server.servlet.context-path=/product-service
 spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=boZ4kiz@ng
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
