--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.servlet.context-path=/product-service
 spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=replaceWithYourMySQLpassword
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
