--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,6 @@ jobs:
 
       - name: Test code
         run: cd frontend && npm test
-        
-      - name: Change to the root directory
-        run: cd ..
-
-      - name: Change to productms directory
-        run: cd backend/product-ms
 
       - name: Use Java 17
         uses: actions/setup-java@v2
@@ -42,5 +36,5 @@ jobs:
 
       - name: Build and test productms
         run: |
-          ./mvnw --batch-mode --update-snapshots package
-          ./mvnw --batch-mode test
+          ./backend/product-ms/mvnw --batch-mode --update-snapshots package
+          ./backend/product-ms/mvnw --batch-mode test
