--- a/backend/user-ms/src/main/resources/application.properties
+++ b/backend/user-ms/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
