--- a/backend/user-ms/pom.xml
+++ b/backend/user-ms/pom.xml
@@ -27,6 +27,12 @@
 			<version>8.0.28</version> <!-- Replace with the appropriate version -->
 		</dependency>
 		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version> <!-- Use the latest version available -->
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
