--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@chakra-ui/icons": "^2.1.1"
+    "@chakra-ui/icons": "^2.1.1",
+    "react-scripts": "^5.0.1"
   }
 }
