--- a/backend/product-ms/.github/workflows/product-ci.yml
+++ b/backend/product-ms/.github/workflows/product-ci.yml
@@ -9,6 +9,14 @@ on:
 jobs:
   build-backend:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.1
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
