--- a/backend/product-ms/.github/workflows/product-ci.yml
+++ b/backend/product-ms/.github/workflows/product-ci.yml
@@ -2,10 +2,7 @@ name: Build and test product service
 on:
   push:
     branches:
-      - main
-    paths:
-      - 'team-project/backend/product-ms/**'
-
+      - '*'
 jobs:
   build-backend:
     runs-on: ubuntu-latest
@@ -17,4 +14,5 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Build with Maven
+        working-directory: team-project-group-p8-01/backend/product-ms
         run: ./mvnw --batch-mode --update-snapshots package
