--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: '*'
   pull_request:
     branches: [ 'main' ]
 
@@ -27,3 +27,16 @@ jobs:
 
       - name: Test code
         run: cd frontend && npm test
+
+  build-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build product-ms
+        run: cd backend/product-ms && ./mvnw --batch-mode --update-snapshots package
+
