--- a/backend/product-ms/.github/workflows/product-ci.yml
+++ b/backend/product-ms/.github/workflows/product-ci.yml
@@ -1,18 +1,20 @@
-#name: Build and test product service
-#on:
-#  push:
-#    branches:
-#      - '*'
-#jobs:
-#  build-backend:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'temurin'
-#      - name: Build with Maven
-#        working-directory: team-project-group-p8-01/backend/product-ms
-#        run: ./mvnw --batch-mode --update-snapshots package
+name: Build and test product service
+on:
+  push:
+    branches:
+      - '*'
+    paths:
+      - 'team-project-group-p8-01/backend/product-ms/**'
+jobs:
+  build-backend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Build with Maven
+        working-directory: team-project-group-p8-01/backend/product-ms
+        run: ./mvnw --batch-mode --update-snapshots package
