--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 server.port=8080
 server.servlet.context-path=/product-service
-spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=Sighduck063318!
+spring.datasource.url=jdbc:mysql://localhost:3306/productdb_CI
 spring.datasource.username=root
-spring.datasource.password=Sighduck063318!
+spring.datasource.password=rootpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
