--- a/backend/product-ms/.github/workflows/product-ci.yml
+++ b/backend/product-ms/.github/workflows/product-ci.yml
@@ -22,7 +22,7 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         env:
-          SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/productdb_CI
+          SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/productdb_CI
           SPRING_DATASOURCE_USERNAME: root
           SPRING_DATASOURCE_PASSWORD: rootpassword
         working-directory: team-project-group-p8-01/backend/product-ms
