--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 server.port=8080
 server.servlet.context-path=/product-service
+# For local
 #spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
 #spring.datasource.username=root
 #spring.datasource.password=Sighduck063318!
-spring.datasource.url=jdbc:mysql://localhost:3306/productdb_CI
+
+# For CI/CD
+spring.datasource.url=jdbc:mysql://mysql:3306/productdb_CI
 spring.datasource.username=root
 spring.datasource.password=rootpassword
+
+# For all 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
