test ci 22, adds docker service container for github actions mysql

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
       - uses: actions/checkout@v3
 #      - name: Debug MySQL
 #        run: docker logs mysql
-      - name: Wait for MySQL to start
-        run: wget -qO- https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh > wait-for-it.sh && chmod +x wait-for-it.sh && ./wait-for-it.sh mysql:3306 --timeout=120
+#      - name: Wait for MySQL to start
+#        run: wget -qO- https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh > wait-for-it.sh && chmod +x wait-for-it.sh && ./wait-for-it.sh mysql:3306 --timeout=120
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
