test ci 23, adds docker service container for github actions mysql

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       mysql:
         image: mysql:8.1.0
         env:
-          MYSQL_ROOT_PASSWORD: rootpassword
+          MYSQL_ROOT_PASSWORD: 'rootpassword'
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
     steps:
       - uses: actions/checkout@v3
@@ -49,8 +49,8 @@ jobs:
           distribution: 'temurin'
       - name: Build product-ms
         env:
-          SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/productdb_CI
-          SPRING_DATASOURCE_USERNAME: root
-          SPRING_DATASOURCE_PASSWORD: rootpassword
+          SPRING_DATASOURCE_URL: 'jdbc:mysql://mysql:3306/productdb_CI'
+          SPRING_DATASOURCE_USERNAME: 'root'
+          SPRING_DATASOURCE_PASSWORD: 'rootpassword'
         run: cd backend/product-ms && ./mvnw --batch-mode --update-snapshots package
 
