--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.servlet.context-path=/product-service
 #spring.datasource.password=Sighduck063318!
 
 # For CI/CD
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/productdb_CI?CreateDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://product-ms_mysqldb:3306/productdb_CI?CreateDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=rootpassword
 
