fixing the tests as unable to build project locally

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ 'ron/DEFECT-backendci' ]
+    branches: [ 'ron/DEFECT-backendci-fix' ]
   pull_request:
     branches: [ 'main' ]
 
