--- a/backend/product-ms/pom.xml
+++ b/backend/product-ms/pom.xml
@@ -28,6 +28,13 @@
 			<scope>test</scope>
 		</dependency>
 
+<!--		run test on h2 database-->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
