--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 server.port=8080
 server.servlet.context-path=/product-service
 # For local
-#spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=Sighduck063318!
+spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Sighduck063318!
 
 # For CI/CD
-spring.datasource.url=jdbc:mysql://product-ms_mysqldb:3306/productdb_CI?CreateDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=rootpassword
+#spring.datasource.url=jdbc:mysql://mysql:3306/productdb_CI?CreateDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=rootpassword
 
 # For all
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
