--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/product-service
 # For local
 spring.datasource.url=jdbc:mysql://localhost:3306/productdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Sighduck063318!
+spring.datasource.password=password
 
 # For CI/CD
 #spring.datasource.url=jdbc:mysql://mysql:3306/productdb_CI?CreateDatabaseIfNotExist=true
