revert ci.yml to trigger on push to 'main'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ 'ron/TASK-update-backend-ci' ]
+    branches: [ 'main' ]
   pull_request:
     branches: [ 'main' ]
 
