chore: add prettier settings for consistent tab width

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
-    "@chakra-ui/icons": "^2.1.1"
+    "@chakra-ui/icons": "^2.1.1",
+    "prettier": "3.0.3"
   }
 }
