--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.15.0",
