--- a/backend/notifications-ms/pom.xml
+++ b/backend/notifications-ms/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
