--- a/backend/delivery-ms/src/main/resources/application.properties
+++ b/backend/delivery-ms/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8082
 server.servlet.context-path=/delivery-service
 spring.datasource.url=jdbc:mysql://localhost:3306/deliverydb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Sighduck063318!
+spring.datasource.password=ReplacePassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
