--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "framer-motion": "^6.5.1",
+    "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
