--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
+
+### Environmental variables for service discovery
+user.service.url=${USER_MS_URL:http://localhost:8081}
+notifications.service.url=${NOTIFICATIONS_MS_URL:http://localhost:8083}
