--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 server.servlet.context-path=/product-service
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/productdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=monday12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
