--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     ports:
       - "8080:8080"
     environment:
-      spring.datasource.url: jdbc:mysql://database:3306/productdb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+      spring.datasource.url: jdbc:mysql://productdb:3306/productdb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
       spring.datasource.driverClassName: com.mysql.cj.jdbc.Driver
       spring.datasource.username: root
       spring.datasource.password: ${DB_PASSWORD}
       USER_MS_URL: http://user:8081
       NOTIFICATIONS_MS_URL: http://notifications:8083
     depends_on:
-      - database
+      - productdb
       - delivery
       - user
 
@@ -23,12 +23,12 @@ services:
     ports:
       - "8082:8082"
     environment:
-      spring.datasource.url: jdbc:mysql://database:3306/deliverydb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+      spring.datasource.url: jdbc:mysql://deliverydb:3306/deliverydb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
       spring.datasource.driverClassName: com.mysql.cj.jdbc.Driver
       spring.datasource.username: root
       spring.datasource.password: ${DB_PASSWORD}
     depends_on:
-        - database
+      - deliverydb
 
   user:
     platform: "linux/amd64"
@@ -36,12 +36,12 @@ services:
     ports:
       - "8081:8081"
     environment:
-      spring.datasource.url: jdbc:mysql://database:3306/userdb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
+      spring.datasource.url: jdbc:mysql://userdb:3306/userdb?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
       spring.datasource.driverClassName: com.mysql.cj.jdbc.Driver
       spring.datasource.username: root
       spring.datasource.password: ${DB_PASSWORD}
     depends_on:
-      - database
+      - userdb
 
   notifications:
     platform: "linux/amd64"
@@ -49,17 +49,40 @@ services:
     ports:
       - "8083:8083"
     
-  database:
+  productdb:
     platform: "linux/amd64"
     image: mysql:8.0-oracle
     restart: unless-stopped
     environment:
-      MYSQL_DATABASE: accountsdb
+      MYSQL_DATABASE: productdb
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "3306:3306"
+#    ports:
+#      - "3306:3306"
     volumes:
-      - db:/var/lib/mysql
+      - productdb:/var/lib/mysql
+
+  deliverydb:
+    platform: "linux/amd64"
+    image: mysql:8.0-oracle
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: deliverydb
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+#    ports:
+#      - "3306:3306"
+    volumes:
+      - deliverydb:/var/lib/mysql
+  userdb:
+    platform: "linux/amd64"
+    image: mysql:8.0-oracle
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: userdb
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+#    ports:
+#      - "3306:3306"
+    volumes:
+      - userdb:/var/lib/mysql
 
   adminer:
     platform: "linux/amd64"
@@ -68,4 +91,6 @@ services:
     ports:
       - "9000:8080"
 volumes:
-  db:
+  productdb:
+  deliverydb:
+  userdb:
