--- a/backend/user-ms/src/main/resources/application.properties
+++ b/backend/user-ms/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
-server.servlet.context-path=/user-service
-spring.datasource.url=jdbc:mysql://localhost:3306/userdb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=replacePassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.servlet.context-path=/user-service
+#spring.datasource.url=jdbc:mysql://localhost:3306/userdb?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=replacePassword
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.show_sql=true
