--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,34 +51,39 @@ services:
     
   productdb:
     platform: "linux/amd64"
-    image: mysql:8.0-oracle
+    image: mysql
     restart: unless-stopped
     environment:
+      MYSQL_USER: root
       MYSQL_DATABASE: productdb
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-#    ports:
-#      - "3306:3306"
+      MYSQL_LOWER_CASE_TABLE_NAMES: "1"
+    ports:
+      - "3306:3306"
     volumes:
       - productdb:/var/lib/mysql
 
   deliverydb:
     platform: "linux/amd64"
-    image: mysql:8.0-oracle
+    image: mysql
     restart: unless-stopped
     environment:
+#      MYSQL_USER: root
       MYSQL_DATABASE: deliverydb
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_LOWER_CASE_TABLE_NAMES: "1"
 #    ports:
 #      - "3306:3306"
     volumes:
       - deliverydb:/var/lib/mysql
   userdb:
     platform: "linux/amd64"
-    image: mysql:8.0-oracle
+    image: mysql
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: userdb
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_LOWER_CASE_TABLE_NAMES: "1"
 #    ports:
 #      - "3306:3306"
     volumes:
