--- a/backend/product-ms/src/main/resources/application.properties
+++ b/backend/product-ms/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 server.port=8080
-#server.servlet.context-path=/product-service
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/productdb?createDatabaseIfNotExist=true
-#spring.datasource.username=root
-#spring.datasource.password=password
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create-drop
+server.servlet.context-path=/product-service
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/productdb?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Sighduck063318!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-
+#spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
