adds frontend to docker-compose. build works with original FE Dockerfile but no connection b/w FE and BE. commit includes changes to FE dockerfile. Needs FIX.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,21 @@ services:
     build: backend/notifications-ms/
     ports:
       - "8083:8083"
+
+  frontend:
+    platform: "linux/amd64"
+    build: frontend/
+    ports:
+      - "3000:3000"
+    environment:
+      REACT_APP_PRODUCT_SERVICE_URL: http://product:8080/product-service
+      REACT_APP_USER_SERVICE_URL: http://user:8081/user-service
+      REACT_APP_DELIVERY_SERVICE_URL: http://delivery:8082/delivery-service
+    depends_on:
+      - product
+      - delivery
+      - user
+      - notifications
     
   productdb:
     platform: "linux/amd64"
