--- a/backend/notifications-ms/pom.xml
+++ b/backend/notifications-ms/pom.xml
@@ -38,6 +38,11 @@
 			<version>3.1.4</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
