--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,11 @@ on:
     branches: [ 'main' ]
 
 jobs:
-  test:
+  frontend-test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Change to frontend directory
-        run: cd frontend
 
       - name: Use Node.js v18
         uses: actions/setup-node@v3
@@ -22,25 +19,50 @@ jobs:
           node-version: '18.x'
           cache: 'npm'
 
-      - name: Install dependencies
+      - name: Install frontend dependencies
         run: cd frontend && npm ci
 
-      - name: Test code
+      - name: Run frontend tests
         run: cd frontend && npm test
-  build-backend:
+
+  frontend-build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
+      - name: Use Node.js v18
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          cache: 'npm'
+
+      - name: Install frontend dependencies
+        run: cd frontend && npm ci
+
+      - name: Build frontend
+        run: cd frontend && npm run build
+
+  backend-build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Build product-ms
         run: cd backend/product-ms && ./mvnw --batch-mode --update-snapshots package
+
       - name: Build user-ms
         run: cd backend/user-ms && ./mvnw --batch-mode --update-snapshots package
+
       - name: Build delivery-ms
         run: cd backend/delivery-ms && ./mvnw --batch-mode --update-snapshots package
+
       - name: Build notifications-ms
         run: cd backend/notifications-ms && ./mvnw --batch-mode --update-snapshots package
