--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: cd frontend && npm ci
 
       - name: Build frontend
-        run: cd frontend && npm run build
+        run: cd frontend && CI=false npm run build
 
   backend-build:
     runs-on: ubuntu-latest
