--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,13 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "ESLINT_NO_DEV_ERRORS=true react-scripts start",
+    "start:prod": "serve -s build -l 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
